more scrollbar fixes and a dashboard tile fix

--- a/app/assets/stylesheets/views/admin/root.scss
+++ b/app/assets/stylesheets/views/admin/root.scss
@@ -3,6 +3,8 @@
   ul.dashboard-sections {
     @include make-row();
     padding-left: 0;
+    margin-left: 0px;
+    margin-right: 0px;
 
     li {
       @include make-col-ready();
